--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,6 +1,7 @@
 [controls]
 blueprint_hotkey_flip_horizontal=Flip Blueprint Horizontally
 blueprint_hotkey_flip_vertical=Flip Blueprint Vertically
+blueprint_hotkey_reverse_inserters=Reverse Inserters
 
 [mod-setting-name]
 blueprint_flip_and_turn_show_buttons=Show Buttons (default: checked)
