--- a/locale/ru/ru.cfg
+++ b/locale/ru/ru.cfg
@@ -4,6 +4,7 @@ blueprint_flip_and_turn=Blueprint Flip and Turn (Инверсия чертеже
 [controls]
 blueprint_hotkey_flip_horizontal=Инвертировать по горизонтали
 blueprint_hotkey_flip_vertical=Инвертировать по вертикали
+blueprint_hotkey_reverse_inserters=Обратные вставки
 
 [mod-setting-name]
 blueprint_flip_and_turn_show_buttons=Отображать кнопки в игре. По умолчанию включено
